@@ -1456,7 +1456,7 @@ yyreduce:
     ssp_result = talloc_asprintf(ssp_slq,
                                  "SELECT ?url WHERE "
                                  "{ %s . ?obj nie:url ?url . FILTER(tracker:uri-is-descendant('file://%s/', ?url)) } %s",
-                                 (yyvsp[(1) - (1)].sval), ssp_slq->slq_vol->v_path, result_limit);
+                                 (yyvsp[(1) - (1)].sval), ssp_slq->slq_scope, result_limit);
     (yyval.sval) = ssp_result;
 }
     break;
@@ -2042,9 +2042,7 @@ int main(int argc, char **argv)
     }
 
     ssp_slq = talloc_zero(NULL, slq_t);
-    struct vol *vol = talloc_zero(ssp_slq, struct vol);
-    vol->v_path = "/Volumes/test";
-    ssp_slq->slq_vol = vol;
+    ssp_slq->slq_scope = talloc_strdup(ssp_slq, "/Volumes/test");
     ssp_slq->slq_allow_expr = true;
     sparqlvar = 'a';
 
